add handler on pagination comments
